--- a/doc/source/admin/release_history/1.5.rst
+++ b/doc/source/admin/release_history/1.5.rst
@@ -22,7 +22,8 @@ Bug fixes
 Improvements
 ------------
 
-* TBW
+* [`2189 <https://cta-redmine.irap.omp.eu/issues/2189>`_] -
+  Enhance efficiency of computations in :ref:`ctmodel`
 
 
 New features
