--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.5.0
 
-8 August 2017
+11 October 2017
 
 
 Introduction
@@ -119,6 +119,9 @@ None
 
 cscripts
 --------
+Add csmodelsois script that replaces selected models in a model container by
+a diffuse map cube (#2180).
+
 Use t-type parameters for "tmin" and "tmax" to all specifying times in various
 formats (#1864).
 
