--- a/doc/source/admin/release_history/1.5.rst
+++ b/doc/source/admin/release_history/1.5.rst
@@ -10,6 +10,7 @@ ctools 1.5 is a major release that adds significant functionality.
 
 In particular, this release provides:
 
+* Support of classical IACT analysis
 * Specifcation of times in various formats (UTC, MJD, JD, MET)
 
 
@@ -28,5 +29,7 @@ Improvements
 New features
 ------------
 
+* [`2208 <https://cta-redmine.irap.omp.eu/issues/2208>`_] -
+  Add :ref:`csphagen` script
 * [`1864 <https://cta-redmine.irap.omp.eu/issues/1864>`_] -
   Use t-type parameters for all ``tmin`` and ``tmax`` parameters
