--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.5.0
 
-11 October 2017
+16 October 2017
 
 
 Introduction
@@ -56,6 +56,9 @@ ctskymap - CTA sky mapping
 Header keywords informing about the dates and times covered by the observations
 used to generate the skymap, as well as the event energy range, are now appended
 as header keywords to the FITS file (#2194).
+
+Add the RING background method, which is a classical analysis methods for IACT
+data analysis, for background subtraction (#2207).
 
 
 ctmodel - CTA counts cube modelling
