Rename ctlike "stat" parameter to "statistic" (#2238)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2017-10-18
+2017-10-21
 
         * Version 1.5.0 released
         ========================
 
+        Rename ctlike "stat" parameter to "statistic" (#2237)
         Enable handling of On/Off observations in csspec (#2231)
         Add csphagen script (#2208)
         Add RING background method to ctskymap (#2207)
