Add "statistic" parameter to ctbutterfly, cterror, cttsmap, and ctulimit (#2237)

--- a/NEWS
+++ b/NEWS
@@ -24,41 +24,49 @@ Support model
 None
 
 
-ctobssim - CTA observation simulation
--------------------------------------
-Use t-type parameters for "tmin" and "tmax" to all specifying times in various
-formats (#1864).
-
-
-ctselect - CTA event selection
-------------------------------
-Use t-type parameters for "tmin" and "tmax" to all specifying times in various
-formats (#1864).
-
-
 ctbin - CTA event binning
 -------------------------
 None
 
 
-ctlike - Maximum likelihood fitting
------------------------------------
-Rename "stats" parameter to "statistic" (#2238).
-
-
-cttsmap - Generation of Test Statistic map
+ctbkgcube - CTA background cube generation
 ------------------------------------------
 None
 
 
-ctskymap - CTA sky mapping
---------------------------
-Header keywords informing about the dates and times covered by the observations
-used to generate the skymap, as well as the event energy range, are now appended
-as header keywords to the FITS file (#2194).
+ctbutterfly - Generate butterfly diagrams
+-----------------------------------------
+Add "statistic" parameter to allow setting of optimizer statistic (#2237).
 
-Add the RING background method, which is a classical analysis methods for IACT
-data analysis, for background subtraction (#2207).
+
+ctcubemask - CTA cube filtering
+-------------------------------
+None
+
+
+ctedispcube - CTA energy dispersion cube generation
+---------------------------------------------------
+None
+
+
+cterror - Likelihood profile error computation
+----------------------------------------------
+Add "statistic" parameter to allow setting of optimizer statistic (#2237).
+
+
+ctexpcube - CTA exposure cube generation
+----------------------------------------
+None
+
+
+ctlike - Maximum likelihood fitting
+-----------------------------------
+Rename "stats" parameter to "statistic" (#2237).
+
+
+ctmapcube - CTA map cube generation
+-----------------------------------
+None
 
 
 ctmodel - CTA counts cube modelling
@@ -72,48 +80,14 @@ parallelization of the tool has also been optimised so that diffuse models are
 not loaded over and over again (#2189).
 
 
-ctexpcube - CTA exposure cube generation
-----------------------------------------
-None
+ctobssim - CTA observation simulation
+-------------------------------------
+Use t-type parameters for "tmin" and "tmax" to all specifying times in various
+formats (#1864).
 
 
-ctpsfcube - CTA point spread function cube generation
------------------------------------------------------
-None
-
-
-ctedispcube - CTA energy dispersion cube generation
----------------------------------------------------
-None
-
-
-ctbkgcube - CTA background cube generation
-------------------------------------------
-None
-
-
-ctmapcube - CTA map cube generation
------------------------------------
-None
-
-
-ctcubemask - CTA cube filtering
--------------------------------
-None
-
-
-ctbutterfly - Generate butterfly diagrams
------------------------------------------
-None
-
-
-ctulimit - Compute upper limit
-------------------------------
-None
-
-
-cterror - Likelihood profile error computation
-----------------------------------------------
+ctphase - Event phase computation
+---------------------------------
 None
 
 
@@ -122,22 +96,148 @@ ctprob - Event probability computation
 None
 
 
-ctphase - Event phase computation
+ctpsfcube - CTA point spread function cube generation
+-----------------------------------------------------
+None
+
+
+ctselect - CTA event selection
+------------------------------
+Use t-type parameters for "tmin" and "tmax" to all specifying times in various
+formats (#1864).
+
+
+ctskymap - CTA sky mapping
+--------------------------
+Header keywords informing about the dates and times covered by the observations
+used to generate the skymap, as well as the event energy range, are now appended
+as header keywords to the FITS file (#2194).
+
+Add the RING background method, which is a classical analysis methods for IACT
+data analysis, for background subtraction (#2207).
+
+
+cttsmap - Generation of Test Statistic map
+------------------------------------------
+Add "statistic" parameter to allow setting of optimizer statistic (#2237).
+
+
+ctulimit - Compute upper limit
+------------------------------
+Add "statistic" parameter to allow setting of optimizer statistic (#2237).
+
+
+cscaldb - Inspect calibration database
+--------------------------------------
+None
+
+
+csebins - Generate energy boundaries
+------------------------------------
+None
+
+
+csfindobs - Find IACT observations
+----------------------------------
+None
+
+
+csiactcopy - Copy IACT observations
+-----------------------------------
+None
+
+
+csiactdata - Inspect IACT data store
+------------------------------------
+None
+
+
+csiactobs - Inspect IACT observation definition XML file
+--------------------------------------------------------
+None
+
+
+cslightcrv - Generate light curve
+---------------------------------
+Use t-type parameters for "tmin" and "tmax" to all specifying times in various
+formats (#1864).
+
+
+csmodelinfo - Return model information
+--------------------------------------
+None
+
+
+csmodelmerge - Merge models
+---------------------------
+None
+
+
+csmodelselect - Select models
+-----------------------------
+None
+
+
+csmodelsois - Puts selected sources in diffuse model cube
+---------------------------------------------------------
+Add csmodelsois script that replaces selected models in a model container by
+a diffuse map cube (#2180).
+
+
+csobs2caldb - Generate calibration database entry for an IACT observation
+-------------------------------------------------------------------------
+None
+
+
+csobsdef - Generate observation definition XML file
+---------------------------------------------------
+None
+
+
+csobsinfo - Return observation definition information
+-----------------------------------------------------
+None
+
+
+csobsselect - Select observations
 ---------------------------------
 None
 
 
-cscripts
---------
-Add csmodelsois script that replaces selected models in a model container by
-a diffuse map cube (#2180).
-
-Use t-type parameters for "tmin" and "tmax" to all specifying times in various
-formats (#1864).
-
+csphagen - Generate On/Off observations
+---------------------------------------
 The script csphagen was added to allow the generation of PHA, ARF and RMF datasets
 for classical On/Off IACT analysis (#2208).
 
+
+csphasecrv - Generate phase curve
+---------------------------------
+None
+
+
+cspull - Generate pull distributions
+------------------------------------
+Use t-type parameters for "tmin" and "tmax" to all specifying times in various
+formats (#1864).
+
+
+csresmap - Generate residual map
+--------------------------------
+None
+
+
+csroot2caldb - Generates calibration database from ROOT file
+------------------------------------------------------------
+None
+
+
+cssens - Computes sensitivity curve
+-----------------------------------
+None
+
+
+csspec - Generates Spectral Energy Distribution
+-----------------------------------------------
 The csspec script now can also handle On/Off spectra for SED generation (#2231).
 
 The csspec script now can also handle non-CTA data. For that purpose a "method"
@@ -146,6 +246,58 @@ parameter has been introduced that allows to selected between slicing of the dat
 the spectral model by a node function (method="NODES"). If method="AUTO" the tool
 will use "SLICE" for observations containing only CTA data and "NODES" for observations
 containing other data (#1927).
+
+
+cssrcdetect - Detects sources in sky map
+----------------------------------------
+None
+
+
+cstsdist - Computes Test Statistic distribution
+-----------------------------------------------
+Use t-type parameters for "tmin" and "tmax" to all specifying times in various
+formats (#1864).
+
+
+cstsmapmerge - Merge Test Statistic maps
+----------------------------------------
+None
+
+
+cstsmapsplit - Prepare split Test Statistic computation
+-------------------------------------------------------
+None
+
+
+csviscube - Generate visibility cube
+------------------------------------
+Use t-type parameters for "tmin" and "tmax" to all specifying times in various
+formats (#1864).
+
+
+csworkflow - Execute workflow
+-----------------------------
+None
+
+
+calutils - Calibration utilities
+--------------------------------
+None
+
+
+ioutils - Input/Output utilities
+--------------------------------
+None
+
+
+modutils - Model utilities
+--------------------------
+None
+
+
+obsutils - Observation utilities
+--------------------------------
+None
 
 
 Examples
