Add "statistic" parameter to all likelihood scripts (#2237)
The scripts cslightcrv, csphasecrv, cspull, cssens, csspec, cstsdist, and cstsmapsplit now have a "statistics" parameter to allow setting of the optimizer statistic. Except of cstsmapsplit, all of the scripts now derive from the cslikelihood base class.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,9 @@
-2017-10-21
+2017-10-22
 
         * Version 1.5.0 released
         ========================
 
-        Add "statistic" parameter to all likelihood tools (#2237)
+        Add "statistic" parameter to all likelihood tools and scripts (#2237)
         Rename ctlike "stat" parameter to "statistic" (#2237)
         Enable handling of On/Off observations in csspec (#2231)
         Add csphagen script (#2208)
