--- a/doc/source/admin/release_history/1.5.rst
+++ b/doc/source/admin/release_history/1.5.rst
@@ -23,6 +23,11 @@ Bug fixes
 Improvements
 ------------
 
+* [`2237 <https://cta-redmine.irap.omp.eu/issues/2237>`_] -
+  Add ``statistic`` parameters to :ref:`ctbutterfly`, :ref:`cterror`,
+  :ref:`cttsmap`, :ref:`ctulimit`, :ref:`cslightcrv, :ref:`csphasecrv`,
+  :ref:`cspull`, :ref:`cssens`, :ref:`csspec`, :ref:`cstsdist` and
+  :ref:`cstsmapsplit`
 * [`2231 <https://cta-redmine.irap.omp.eu/issues/2231>`_] -
   Enable handling of On/Off observations in :ref:`csspec`
 * [`2207 <https://cta-redmine.irap.omp.eu/issues/2207>`_] -
@@ -50,3 +55,7 @@ Clean up
 
 * [`2237 <https://cta-redmine.irap.omp.eu/issues/2237>`_] -
   Rename :ref:`ctlike` ``stat`` parameter to ``statistic``
+* [`2237 <https://cta-redmine.irap.omp.eu/issues/2237>`_] -
+  Derive :ref:`cslightcrv, :ref:`csphasecrv`, :ref:`cspull`, :ref:`cssens`,
+  :ref:`csspec` and :ref:`cttsdist` scripts from ``cslikelihood`` base
+  class
