--- a/doc/source/admin/release_history/1.5.rst
+++ b/doc/source/admin/release_history/1.5.rst
@@ -23,6 +23,8 @@ Bug fixes
 Improvements
 ------------
 
+* [`2260 <https://cta-redmine.irap.omp.eu/issues/2260>`_] -
+  Handle On/Off observations by :ref:`cspull`
 * [`2237 <https://cta-redmine.irap.omp.eu/issues/2237>`_] -
   Add ``statistic`` parameters to :ref:`ctbutterfly`, :ref:`cterror`,
   :ref:`cttsmap`, :ref:`ctulimit`, :ref:`cslightcrv, :ref:`csphasecrv`,
