completed layout and added user contributed directory

--- a/doc/source/users/user_manual/ctools-from-python.ipynb
+++ b/doc/source/users/user_manual/ctools-from-python.ipynb
@@ -4,8 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using ctools from Python\n",
-    "\n",
+    "# Using ctools from Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](../../jupyter-logo.svg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In this notebook you will learn how to use the ctools and cscripts from Python instead of typing the commands in the console.\n",
     "\n",
     "ctools provides two Python modules that allow using all tools and scripts as Python classes. To use ctools from Python you have to import the ctools and cscripts modules into Python. You should also import the gammalib module, as ctools without GammaLib is generally not very useful.\n",
@@ -616,7 +628,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The test statistic TS is expected to be distributed as a chi square with a number of degrees of freedom equal to the additional number of degrees of freedom of the second, more complex, model with respect to the original, more parsimonious, one, so for us two degrees of freedom. The chance probability that the likelihood improved that much because of pure statistical fluctuations is the integral from TS to infinity of the chi square with two degrees of freedom. In this case the improvement is negligible (i.e., the chance probability is very high), as expected since in the model the source is already at the true position."
+    "The test statistic TS is expected to be distributed as a chi square with a number of degrees of freedom equal to the additional number of degrees of freedom of the (second) more complex model with respect to the (first) more parsimonious one, for our case two degrees of freedom. The chance probability that the likelihood improved that much because of pure statistical fluctuations is the integral from TS to infinity of the chi square with two degrees of freedom. In this case the improvement is negligible (i.e., the chance probability is very high), as expected since in the model the source is already at the true position."
    ]
   }
  ],
