Add Jupyter download button and remove link to page source

--- a/doc/source/users/user_manual/ctools-from-python.ipynb
+++ b/doc/source/users/user_manual/ctools-from-python.ipynb
@@ -8,10 +8,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "![](../../jupyter-logo.svg)"
+    "<div align=\"right\"><a href=\"../../_downloads/ctools-from-python.ipynb\"><img src=\"../../_static/download-notebook.jpg\" alt=\"Download Notebook\" height=\"40\"></a></div>"
    ]
   },
   {
