Set Jupyter filename for download

--- a/doc/source/users/tutorials/quickstart/ctools-from-python.ipynb
+++ b/doc/source/users/tutorials/quickstart/ctools-from-python.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "<div align=\"right\"><a href=\"../../../_downloads/ctools-from-python.ipynb\" download><img src=\"../../../_static/download-notebook.jpg\" alt=\"Download Notebook\" height=\"40\"></a></div>"
+    "<div align=\"right\"><a href=\"../../../_downloads/ctools-from-python.ipynb\" download=\"ctools-from-python.ipynb\"><img src=\"../../../_static/download-notebook.jpg\" alt=\"Download Notebook\" height=\"40\"></a></div>"
    ]
   },
   {
