--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2017-11-27
+2017-11-28
 
         * Version 1.5.0 released
         ========================
 
+        Support On/Off analysis in cslightcrv and csphasecrv (#2273)
         Add tutorial for classical analysis (#2267)
         Fix chatter level handling in ctpsfcube (#2262)
         Handle On/Off observations by cspull (#2260)
