--- a/doc/source/users/tutorials/quickstart/ctools-from-python.ipynb
+++ b/doc/source/users/tutorials/quickstart/ctools-from-python.ipynb
@@ -9,7 +9,9 @@
   },
   {
    "cell_type": "raw",
-   "metadata": {"jupyter.source_hidden": true},
+   "metadata": {
+    "jupyter.source_hidden": true
+   },
    "source": [
     "<div align=\"right\"><a href=\"../../../_downloads/ctools-from-python.ipynb\" download=\"ctools-from-python.ipynb\"><img src=\"../../../_static/download-notebook.jpg\" alt=\"Download Notebook\" height=\"40\"></a></div>"
    ]
@@ -60,8 +62,8 @@
     "sim['outevents'] = 'events.fits'\n",
     "sim['caldb'] = 'prod2'\n",
     "sim['irf'] = 'South_0.5h'\n",
-    "sim['ra'] = 83.63\n",
-    "sim['dec'] = 22.01\n",
+    "sim['ra'] = 83.5\n",
+    "sim['dec'] = 22.8\n",
     "sim['rad'] = 5.0\n",
     "sim['tmin'] = '2020-01-01T00:00:00'\n",
     "sim['tmax'] = '2020-01-01T01:00:00'\n",
